# python-lib

./: pyproject.toml
mytool/: main.py
mytool/template_project/: analysis.py  analysis.r  arima.py  arima.r  arimaeasy.py  logistic.py  multiple.py  pubspec.yaml  pyproject.toml  sentiment.py  sentiment.r  simple.py  spam.py  spam.r  timeseries.py  timeseries.r  visualization.py  visualization.r  wordcloud.py  wordcloud.r
mytool/template_project/1/resume_app/: README.md  pubspec.yaml
mytool/template_project/1/resume_app/android/app/: build.gradle.kts
mytool/template_project/1/resume_app/ios/Runner/: Info.plist
mytool/template_project/1/resume_app/ios/Runner.xcodeproj/: project.pbxproj
mytool/template_project/1/resume_app/lib/: main.dart
mytool/template_project/1/resume_app/linux/: CMakeLists.txt
mytool/template_project/1/resume_app/linux/runner/: my_application.cc
mytool/template_project/1/resume_app/macos/Runner.xcodeproj/: project.pbxproj
mytool/template_project/1/resume_app/web/: index.html
mytool/template_project/1/resume_app/windows/runner/: Runner.rc
mytool/template_project/2/: main.dart
mytool/template_project/3/: main.dart
mytool/template_project/4/lib/: login.dart  main.dart  page1.dart  page2.dart  preview.dart  register.dart  resume.dart
mytool/template_project/web/: index.html  package-lock.json  package.json
mytool/template_project/web/public/: manifest.json  sw.js
mytool/template_project/web/src/: App.jsx  main.jsx
mytool/template_project/web/src/pages/: Login.jsx  Page1.jsx  Page2.jsx  Preview.jsx  Register.jsx  Resume.jsx
(+8 files in other folders)
