[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dav-pracs"
version = "1.0.3"
description = "DAV practicals package with all code files and datasets"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Shreyas Umakant Pansare"}
]

[project.urls]
Homepage = "https://github.com/shreyaspansare/dav_pracs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dav_pracs = ["*.csv", "*.r"]